17 April 2018: Wouter
	- auth zone notify work.
	- allow-notify: config statement for auth-zones.
	- unit test for allow-notify

16 April 2018: Wouter
	- Fix auth zone target lookup iterator.
	- auth zone notify with prefix
	- auth zone notify work.

13 April 2018: Wouter
	- Fix for max include depth for authzones.
	- Fix memory free on fail for $INCLUDE in authzone.
	- Fix that an internal error to look up the wrong rr type for
	  auth zone gets stopped, before trying to send there.
	- auth zone notify work.

10 April 2018: Ralph
	- num.query.aggressive.NOERROR and num.query.aggressive.NXDOMAIN
	  statistics counters.

10 April 2018: Wouter
	- documentation for low-rtt and low-rtt-pct.
	- auth zone notify work.

9 April 2018: Wouter
	- Fix that flush_zone sets prefetch ttl expired, so that with
	  serve-expired enabled it'll start prefetching those entries.
	- num.query.authzone.up and num.query.authzone.down statistics counters.
	- Fix downstream auth zone, only fallback when auth zone fails to
	  answer and fallback is enabled.
	- Accept both option names with and without colon for get_option
	  and set_option.
	- low-rtt and low-rtt-pct in unbound.conf enable the server selection
	  of fast servers for some percentage of the time.

5 April 2018: Wouter
	- Combine write of tcp length and tcp query for dns over tls.
	- nitpick fixes in example.conf.
	- Fix above stub queries for type NS and useless delegation point.
	- Fix unbound-control over pipe with openssl 1.1.1, the TLSv1.3
	  tls_choose_sigalg routine does not allow the ciphers for the pipe,
	  so use TLSv1.2.
	- ED448 support.

3 April 2018: Wouter
	- Fix #4043: make test fails due to v6 presentation issue in macOS.
	- Fix unable to resolve after new WLAN connection, due to auth-zone
	  failing with a forwarder set.  Now, auth-zone is only used for
	  answers (not referrals) when a forwarder is set.

29 March 2018: Ralph
	- Check "result" in dup_all(), by Florian Obser.

23 March 2018: Ralph